# clinical-ai-gateway

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_rag.py
data/: synthetic_patients.json
doc/: architecture.md
docs/: architecture.md  audit-logging.md  gateway-implementation-plan.md
gateway/: config.py  logging_config.py  main.py  schemas.py
gateway/middleware/: audit.py  input_validation.py  output_filter.py  rate_limit.py
gateway/routes/: data.py  health.py  query.py
gateway/services/: data_ingestion.py  llm_client.py
tests/: test_health.py  test_input_validation.py  test_query.py
