[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-ai-gateway"
version = "0.1.0"
description = "Security-first gateway for clinical AI inference."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "chromadb>=0.4.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "sentence-transformers>=2.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[tool.setuptools.packages.find]
include = ["gateway*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
